2011-06-17:
  - Removed mkHelpDir() that has not worked for a while because of architectural
    changes in R.
  - Removed some unused variables from the C-code that caused warnings.
  - Corrected a bug in format.mtable() misusing the function character()
    and some other buglets reported by NOTE's in automatic runs by CRAN.

2011-05-29:
  - Applied patch sent by Christopher N. Lawrence, Ph.D. <c.n.lawrence@gmail.com>:
    Added support to mtable() for clm and clmm ordinal models in the ordinal package.
    Updates getSummary to support mer objects as generated by recent versions of the lme4 package.
    Adds the Aldrich & Nelson pseudo-R2 (Aldrich and Nelson 1984)
    to mtable output for various categorical models.

2011-05-14:

  - Fixed problems with SPSS system files that do not contain an 'info_flt64' record. This problem led to zeroes in the data section of the file being erroneously interpreted as *sysmis*.
  - Fixed 'show' and 'print' methods for 'data.set' objects - they no do fit the width set by options(width=...), without ugly line breaks.
  - Changed the default value of the 'compress.storage.modes' option for the
    subset and bracket methods o 'importer' objects to FALSE, which is much
    more safer.

2010-07-16:
  - fixed a bug in 'Simulate' that caused it to fail in certain situations
    in R version >= 2.11.

2010-04-12:
  - 'toLatex(mtable(<something>),useDcolumn=FALSE)' should now produce useable
    LaTeX output ($'s are added to the table entries).

2010-04-09:
  - 'By' works now with 'genTable' and 'aggregate.formula'. It gains a 'data.frame'
    method, which better cooperates with calls to 'lm'-like functions. Their results
    get a 'data' component containing the subset of the data frame that was given
    as 'data' argument to the call of 'By'.

2010-04-08:
  - fixed bug in 'cases'. It works now with target expressions even with 'within'.
  - 'write.mtable' now handles a 'forLaTeX=TRUE' option in a more convenient way.